changement de lorem

--- a/tp.html
+++ b/tp.html
@@ -6,11 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-        Aliquid blanditiis culpa quam obcaecati, modi amet assumenda
-         repudiandae, reiciendis fuga distinctio dolorum! Commodi nobis 
-         debitis nesciunt corrupti at inventore, magni temporibus delectus! 
-         Doloribus a vitae inventore excepturi at vel perferendis et! Perspiciatis,
-          maxime ducimus.</p>
+    <p>Jacquie et Ramatou sont en l'heure today</p>
 </body>
 </html>
